Changelog for Articles.

Articles 1.4.2
===============================
- [#6535] Fix issue with incorrect include reference for update services
- [#6535] Fix issue with url generation for twitter posting on first save
- [#6542] Fix right-click edit article from grid issue

Articles 1.4.1
===============================
- Add in container calls to each Article to allow sidebars
- [#6471] Fix issue with MODX import when no TV value is set yet TV is set to import
- [#6490] Fix missing <ul> in container template

Articles 1.4.0
===============================
- Add limiter for number of hashtags that are tweeted
- [#6457] Allow option of posting Article title/url/tags to Twitter on publish
- [#6430] Fix RSS sample template

Articles 1.3.0
===============================
- Add "Other Parameters" for listing snippet, which allows you to pass other properties to the getPage/getResources call
- Add option to Require Authentication for commenting
- Upgrade Archivist to 1.2.2-pl

Articles 1.2.1
===============================
- [#6400] Fix issue where alias was not changed in articles when container's alias was changed

Articles 1.2.0
===============================
- [#6385] Fix issue with Resource Groups tab not showing for individual Articles
- [#6374] Fix issue where tags were not showing in RSS
- [#6376] Fix date formatting for RSS pub date
- [#6375] Properly send RSS headers (requires Revo 2.2-pl or later)

Articles 1.1.5
===============================
- [#6345] Fix and improve article view in front-end for default template
- [#6342] Fix issue where container content was not persistent
- [#6346] Add missing IDs to various panels in Articles UI to allow for Form Customization targeting

Articles 1.1.2/3/4
===============================
- Better handling of comment import and MODX tags in WordPress import
- More WordPress import fixes with character encodings
- [#6339] Fix import from WordPress because WordPress does not escape brackets properly from export WXR file
