@@ -25,6 +25,8 @@ $_lang['articles.article'] = 'Article';
 $_lang['articles.article_alias'] = 'Alias (Permalink)';
 $_lang['articles.article_content'] = 'Content';
 $_lang['articles.article_create'] = 'New Article';
+$_lang['articles.article_delete'] = 'Delete Article';
+$_lang['articles.article_delete_confirm'] = 'Are you sure you want to delete the selected Article?';
 $_lang['articles.article_delete_multiple'] = 'Delete Multiple Articles';
 $_lang['articles.article_delete_multiple_confirm'] = 'Are you sure you want to delete the selected Articles?';
 $_lang['articles.article_edit'] = 'Edit Article';
